--- a/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -147,4 +147,7 @@
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\cuboid.obj" />
+  </ItemGroup>
 </Project>
