--- a/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="..\Model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\SimplePointer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -131,6 +134,9 @@
     <ClCompile Include="..\Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\SimplePointer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shader.frag">
@@ -162,6 +168,12 @@
       <Filter>Source Files</Filter>
     </None>
     <None Include="..\modelShader.vert">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="..\simplePointerShader.frag">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="..\simplePointerShader.vert">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
