--- a/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="..\Water.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Sound.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -159,6 +162,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Water.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Sound.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
