--- a/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="..\Sound.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -165,6 +168,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Sound.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Tree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
