--- a/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="..\Tree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Particle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -173,6 +176,9 @@
     <ClCompile Include="..\Tree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Particle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shader.frag">
@@ -226,5 +232,7 @@
     <None Include="..\waterShader.frag">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="..\particleShader.vert" />
+    <None Include="..\particleShader.frag" />
   </ItemGroup>
 </Project>
