--- a/GLFWStarterProject/GLFWStarterProject.vcxproj
+++ b/GLFWStarterProject/GLFWStarterProject.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="..\Node.h" />
     <ClInclude Include="..\Object.h" />
     <ClInclude Include="..\OBJObject.h" />
+    <ClInclude Include="..\Particle.h" />
     <ClInclude Include="..\Rotate.h" />
     <ClInclude Include="..\Scale.h" />
     <ClInclude Include="..\shader.h" />
@@ -60,6 +61,7 @@
     <ClCompile Include="..\Node.cpp" />
     <ClCompile Include="..\Object.cpp" />
     <ClCompile Include="..\OBJObject.cpp" />
+    <ClCompile Include="..\Particle.cpp" />
     <ClCompile Include="..\Rotate.cpp" />
     <ClCompile Include="..\Scale.cpp" />
     <ClCompile Include="..\shader.cpp" />
@@ -85,6 +87,8 @@
     <None Include="..\geometryShader.vert" />
     <None Include="..\modelShader.frag" />
     <None Include="..\modelShader.vert" />
+    <None Include="..\particleShader.frag" />
+    <None Include="..\particleShader.vert" />
     <None Include="..\shader.frag" />
     <None Include="..\shader.vert" />
     <None Include="..\simplePointerShader.frag" />
