--- a/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -93,7 +93,7 @@
     <ClInclude Include="..\Tree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Particle.h">
+    <ClInclude Include="..\ParticleGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -176,7 +176,7 @@
     <ClCompile Include="..\Tree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Particle.cpp">
+    <ClCompile Include="..\ParticleGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
